--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.6.0",
     "gulp-cache": "^0.2.2",
     "gulp-csso": "^0.2.6",
+    "gulp-headerfooter": "^1.0.3",
     "gulp-if": "^1.2.1",
     "gulp-imagemin": "^2.0.0",
     "gulp-jshint": "^1.5.3",
